# spdlog_wrapper

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
doc/: index.md
example/src/: main.cpp
example/src/test/: test_log.cpp  test_log.h
include/: logger.hpp  wlog.hpp
src/: logger.h  logger.hpp  main.cpp
